export const snapshot = {};

snapshot[`typegraphs creation 1`] = `
'[
  {
    "\$id": "https://metatype.dev/specs/0.0.3.json",
    "types": [
      {
        "type": "object",
        "title": "test-complex-types",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false,
        "properties": {
          "test": 1
        },
        "required": [
          "test"
        ]
      },
      {
        "type": "function",
        "title": "func_21",
        "runtime": 0,
        "policies": [
          0
        ],
        "config": {},
        "as_id": false,
        "input": 2,
        "output": 18,
        "materializer": 0,
        "rate_weight": null,
        "rate_calls": false
      },
      {
        "type": "object",
        "title": "ComplexType",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false,
        "properties": {
          "a_string": 3,
          "a_float": 4,
          "an_enum": 5,
          "an_integer_enum": 6,
          "a_float_enum": 7,
          "a_struct": 8,
          "nested": 10,
          "nested_with_ref": 14,
          "an_email": 17
        },
        "required": []
      },
      {
        "type": "string",
        "title": "string_5",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false
      },
      {
        "type": "float",
        "title": "float_6",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false,
        "minimum": 1.0,
        "multipleOf": 2.0
      },
      {
        "type": "string",
        "title": "string_7",
        "runtime": 0,
        "policies": [],
        "enum": [
          "\\\\"one\\\\"",
          "\\\\"two\\\\""
        ],
        "config": {},
        "as_id": false
      },
      {
        "type": "integer",
        "title": "integer_8",
        "runtime": 0,
        "policies": [],
        "enum": [
          "1",
          "2"
        ],
        "config": {
          "key": "value"
        },
        "as_id": false
      },
      {
        "type": "float",
        "title": "float_9",
        "runtime": 0,
        "policies": [],
        "enum": [
          "1.5",
          "2.5"
        ],
        "config": {},
        "as_id": false
      },
      {
        "type": "object",
        "title": "object_11",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false,
        "properties": {
          "value": 9
        },
        "required": []
      },
      {
        "type": "float",
        "title": "float_10",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false
      },
      {
        "type": "optional",
        "title": "optional_16",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false,
        "item": 11,
        "default_value": null
      },
      {
        "type": "list",
        "title": "list_15",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false,
        "items": 12
      },
      {
        "type": "either",
        "title": "either_14",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false,
        "oneOf": [
          3,
          13
        ]
      },
      {
        "type": "integer",
        "title": "integer_13",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false
      },
      {
        "type": "object",
        "title": "SomeType",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false,
        "properties": {
          "one": 15,
          "two": 16
        },
        "required": []
      },
      {
        "type": "list",
        "title": "Two",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false,
        "items": 13,
        "minItems": 3
      },
      {
        "type": "optional",
        "title": "_3_SomeType?",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false,
        "item": 14,
        "default_value": null
      },
      {
        "type": "string",
        "title": "string_17",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false,
        "format": "email"
      },
      {
        "type": "boolean",
        "title": "boolean_19",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false
      }
    ],
    "materializers": [
      {
        "name": "function",
        "runtime": 0,
        "effect": {
          "effect": "read",
          "idempotent": true
        },
        "data": {
          "script": "var _my_lambda = () => true",
          "secrets": []
        }
      },
      {
        "name": "predefined_function",
        "runtime": 0,
        "effect": {
          "effect": "read",
          "idempotent": true
        },
        "data": {
          "name": "true"
        }
      }
    ],
    "runtimes": [
      {
        "name": "deno",
        "data": {
          "worker": "default",
          "permissions": {}
        }
      }
    ],
    "policies": [
      {
        "name": "__public",
        "materializer": 1
      }
    ],
    "meta": {
      "prefix": null,
      "secrets": [],
      "queries": {
        "dynamic": true,
        "endpoints": []
      },
      "cors": {
        "allow_origin": [
          "*"
        ],
        "allow_headers": [],
        "expose_headers": [],
        "allow_methods": [
          "GET"
        ],
        "allow_credentials": false,
        "max_age_sec": 120
      },
      "auths": [
        {
          "name": "basic",
          "protocol": "basic",
          "auth_data": {
            "users": [
              "testBasicAuth"
            ]
          }
        },
        {
          "name": "testHmacAuth",
          "protocol": "jwt",
          "auth_data": {
            "format": "raw",
            "algorithm": {
              "name": "HMAC",
              "hash": {
                "name": "SHA-256"
              }
            }
          }
        }
      ],
      "rate": {
        "window_limit": 128,
        "window_sec": 60,
        "query_limit": 8,
        "context_identifier": "user",
        "local_excess": 5
      },
      "version": "0.0.3",
      "random_seed": null
    }
  }
]'
`;

snapshot[`typegraphs creation 2`] = `
\`[
  {
    "\$id": "https://metatype.dev/specs/0.0.3.json",
    "types": [
      {
        "type": "object",
        "title": "test-multiple-runtimes",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false,
        "properties": {
          "add": 1,
          "multiply": 4
        },
        "required": [
          "add",
          "multiply"
        ]
      },
      {
        "type": "function",
        "title": "func_5",
        "runtime": 1,
        "policies": [
          0
        ],
        "config": {},
        "as_id": false,
        "input": 2,
        "output": 3,
        "materializer": 0,
        "rate_weight": null,
        "rate_calls": false
      },
      {
        "type": "object",
        "title": "object_2",
        "runtime": 1,
        "policies": [],
        "config": {},
        "as_id": false,
        "properties": {
          "first": 3,
          "second": 3
        },
        "required": []
      },
      {
        "type": "float",
        "title": "float_0",
        "runtime": 1,
        "policies": [],
        "config": {},
        "as_id": false
      },
      {
        "type": "function",
        "title": "func_11",
        "runtime": 0,
        "policies": [
          0
        ],
        "config": {},
        "as_id": false,
        "input": 2,
        "output": 3,
        "materializer": 2,
        "rate_weight": null,
        "rate_calls": false
      }
    ],
    "materializers": [
      {
        "name": "lambda",
        "runtime": 1,
        "effect": {
          "effect": "read",
          "idempotent": true
        },
        "data": {
          "name": "sha256_ca4c84007bbe1e2253363df3d2da8605fc21e36c4c280cbb335b7daf5ce0dc73",
          "fn": "(lambda x: (x['first'] + x['second']))"
        }
      },
      {
        "name": "predefined_function",
        "runtime": 0,
        "effect": {
          "effect": "read",
          "idempotent": true
        },
        "data": {
          "name": "true"
        }
      },
      {
        "name": "function",
        "runtime": 0,
        "effect": {
          "effect": "read",
          "idempotent": true
        },
        "data": {
          "script": "var _my_lambda = ({ first, second }) => first * second",
          "secrets": []
        }
      }
    ],
    "runtimes": [
      {
        "name": "deno",
        "data": {
          "worker": "default",
          "permissions": {}
        }
      },
      {
        "name": "python_wasi",
        "data": {
          "config": null
        }
      }
    ],
    "policies": [
      {
        "name": "__public",
        "materializer": 1
      }
    ],
    "meta": {
      "prefix": null,
      "secrets": [],
      "queries": {
        "dynamic": true,
        "endpoints": []
      },
      "cors": {
        "allow_origin": [],
        "allow_headers": [],
        "expose_headers": [],
        "allow_methods": [],
        "allow_credentials": true,
        "max_age_sec": null
      },
      "auths": [],
      "rate": null,
      "version": "0.0.3",
      "random_seed": null
    }
  }
]\`
`;

snapshot[`typegraphs creation 3`] = `
\`[
  {
    "\$id": "https://metatype.dev/specs/0.0.3.json",
    "types": [
      {
        "type": "object",
        "title": "test-types",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false,
        "properties": {
          "one": 1,
          "two": 6,
          "three": 10
        },
        "required": [
          "one",
          "two",
          "three"
        ]
      },
      {
        "type": "function",
        "title": "func_11",
        "runtime": 0,
        "policies": [
          0
        ],
        "config": {},
        "as_id": false,
        "input": 2,
        "output": 5,
        "materializer": 0,
        "rate_weight": null,
        "rate_calls": false
      },
      {
        "type": "object",
        "title": "object_2",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false,
        "properties": {
          "a": 3,
          "b": 4
        },
        "required": []
      },
      {
        "type": "integer",
        "title": "integer_0",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false
      },
      {
        "type": "integer",
        "title": "integer_1",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false,
        "minimum": 12
      },
      {
        "type": "integer",
        "title": "integer_3",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false,
        "minimum": 12,
        "maximum": 43
      },
      {
        "type": "function",
        "title": "func_13",
        "runtime": 0,
        "policies": [
          1
        ],
        "config": {},
        "as_id": false,
        "input": 7,
        "output": 9,
        "materializer": 2,
        "rate_weight": null,
        "rate_calls": false
      },
      {
        "type": "object",
        "title": "User",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false,
        "properties": {
          "id": 8,
          "post": 9
        },
        "required": []
      },
      {
        "type": "integer",
        "title": "integer_4",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false
      },
      {
        "type": "object",
        "title": "Post",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false,
        "properties": {
          "id": 8,
          "author": 7
        },
        "required": []
      },
      {
        "type": "function",
        "title": "func_15",
        "runtime": 0,
        "policies": [
          2
        ],
        "config": {},
        "as_id": false,
        "input": 2,
        "output": 2,
        "materializer": 4,
        "rate_weight": null,
        "rate_calls": false
      }
    ],
    "materializers": [
      {
        "name": "function",
        "runtime": 0,
        "effect": {
          "effect": "read",
          "idempotent": true
        },
        "data": {
          "script": "var _my_lambda = () => 12",
          "secrets": []
        }
      },
      {
        "name": "function",
        "runtime": 0,
        "effect": {
          "effect": "read",
          "idempotent": true
        },
        "data": {
          "script": "var _my_lambda = (_, { context }) => context.provider === 'internal'",
          "secrets": []
        }
      },
      {
        "name": "function",
        "runtime": 0,
        "effect": {
          "effect": "read",
          "idempotent": true
        },
        "data": {
          "script": "var _my_lambda = (user) => ({ id: 12, user })",
          "secrets": []
        }
      },
      {
        "name": "function",
        "runtime": 0,
        "effect": {
          "effect": "read",
          "idempotent": true
        },
        "data": {
          "script": "var _my_lambda = () => false",
          "secrets": []
        }
      },
      {
        "name": "import_function",
        "runtime": 0,
        "effect": {
          "effect": "read",
          "idempotent": true
        },
        "data": {
          "mod": 5,
          "name": "three",
          "secrets": []
        }
      },
      {
        "name": "module",
        "runtime": 0,
        "effect": {
          "effect": "read",
          "idempotent": true
        },
        "data": {
          "code": "file:scripts/three.ts;base64:H4sIAAAAAAAA/+1Y727bNhD3Zz0FoX6ROlX1n8QZvKnY1nZdgRYL2mwYEAQCLdG2UEnUSGqxZ/hN9jZ7sR1J/becpEASDK0PSEzyjse7I3n86QKaZDFZu9lm8GA0BJpOp73jQJPJ6UnZliTb05Ozs8Fw8AiUc4EZQoOvlJ6glzTbsGi5Eug9EVhsMoJ+/fcfB8VRQFJOQpSnIWFIrAh6T/+O4hij83wOXPROS6DfCeMRTdHYHbrGE/Tx/NUfzwres7chSUW0iAiboffn756BjGEsGE2QXGnJcLZCUZJRJpBw6rGOiKv/Z5jhhJfyP+Zi5YD5jDvoAxakf87eMm/69GcUHNqUIueq15VhOXiSEO6CS7QUfQXtD5phGMYPlbRlIKAAjPOkhborCccxvfYDRlRgcMy9n+EfcToCK4Ih6ty7vOpyEiJWNASO+eb1hbnHprCXUQrcp00eWWeUk16tCV77eEl8TgJvNB5qhq1/GITVk7Gt7b+O0hCWkdLTodMdjqMkEqDm25rzZ07YpmA0hmMa4Ngn64Bw7p3W4wFNBVkLP6oOjmfmnDCzMsw2QrJAgnDhBzp7+TLs3FrO9ObaMyWqtslr7pBlK0aWz2Fcb7KbqbMMHMXiNCEX8gp4SLhcsDwQtevbqiXJpCkxZyAWR1xYwo3A7iVhlu2gBDZg4qAUJ8QzL66paTvtqQLG5FSaCbg4OLaWLiMLy/xYLG/ajRm7uqk1VlJFSIzirKlY3NV67INAlC6VHbppdc3E/iKmWCgR1bKkZyN3CC7msYhgPZ8uPLjTezNTn6R5ombKhnWpwuVo1696xIvw1dPKeMoB73LkoPGVI0/HIlp6W/MT2YCU+ReOc2LuDhheK9PWF6rcU1Dmnu5b4euYlSGR4dsWS9RK7L3VUjiKJGyeBRJBumTWZSOyDY/sK9uut75fm38NKnw4FKC2PJQ9MU5wFOsgy5Z106l5WZ+P9sFZuhgyqSXTqTvHHC7DpSlv10+yLUdhv+w9yVWCg/Hp1FKiv0BHSdqVTp1x6uMnxTx5Jd1FngZWy5XG0W37KNw5pTHBaTdKAQ3BJctG3gsEG1V6pLxyVeh0Rrfgetult4Mj7VF1j6vX7f6R4C34b3Ry1sV/o+F0ND7iv0egfiimnlHnRkR2L4jpkHy2AYyTVspVrxdlNbDA3knu4gH90ve8/JJ5GCxoU7y2FdbBPIfD0NNzXOmdH+NkHmKrk9a6j3NJ270RleoXEePNZ7iTDSs5QGU0DW8W3LVG7G7C7Z2nnUDrGVpfFsZcoW9kp1jx6ob8C78NdcU2bQ69BY2Xd9/rPg93d3OheDG2SGl1kFaEduoJUWPoaTFo3smZL+M94QGLMsGfixUjxBV88AB0S/4fnkwn3e//s+n4mP8fg54//5wCwOsYc9H48ldf/KDi4Cd/MUF/9kv8yxY4IOhCnra3aZYLlfHmMwTIfE7Yd9DBdWdnGDK9whMg84TEy0idU5kxtgg7aI52s4YyeTG3MLItvyJn6APcaBZ+r2G4A658Sul1+kLCY3umFsfNxRuW7BSXEZGztFpN2jT4kohHEno/aPnvVvw3ne7X/ybjyfH+PwL9T+t/TgHSnP5y3e2lOKxqINUXt2HwUbMqsjUxYAi40+a8VWxQ9Y0xYArDmLc0aIYjq2XeycQ+iEI/uxJ1GJKqdAkVgppdjpToU9bF2l5FYcsdiZgAnkoQVVSYzmXP3pXFqd9kZa2wBTi3KpPf/5TV6vT8Sp3WfggaQwWogfo4lHTmTutLfjQ224CrdLiB5aB+1FAiI+Ao0ytNckhpA6wXhTMkd00Famd3tLfwodJZMEzobGSxSpu1kAXaIkodzKyeI22PPoW+8kv+6YgoAVCV0DCPod/FWzeZpE9Dd9ljHeNIRzrS/dB/B6n8KQAeAAA="
        }
      },
      {
        "name": "predefined_function",
        "runtime": 0,
        "effect": {
          "effect": "read",
          "idempotent": true
        },
        "data": {
          "name": "true"
        }
      }
    ],
    "runtimes": [
      {
        "name": "deno",
        "data": {
          "worker": "default",
          "permissions": {}
        }
      }
    ],
    "policies": [
      {
        "name": "__internal",
        "materializer": 1
      },
      {
        "name": "deny",
        "materializer": 3
      },
      {
        "name": "__public",
        "materializer": 6
      }
    ],
    "meta": {
      "prefix": null,
      "secrets": [],
      "queries": {
        "dynamic": true,
        "endpoints": []
      },
      "cors": {
        "allow_origin": [],
        "allow_headers": [],
        "expose_headers": [],
        "allow_methods": [],
        "allow_credentials": true,
        "max_age_sec": null
      },
      "auths": [],
      "rate": null,
      "version": "0.0.3",
      "random_seed": null
    }
  }
]\`
`;

snapshot[`typegraphs creation 4`] = `
'[
  {
    "\$id": "https://metatype.dev/specs/0.0.3.json",
    "types": [
      {
        "type": "object",
        "title": "test-complex-types",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false,
        "properties": {
          "test": 1
        },
        "required": [
          "test"
        ]
      },
      {
        "type": "function",
        "title": "func_21",
        "runtime": 0,
        "policies": [
          0
        ],
        "config": {},
        "as_id": false,
        "input": 2,
        "output": 18,
        "materializer": 0,
        "rate_weight": null,
        "rate_calls": false
      },
      {
        "type": "object",
        "title": "ComplexType",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false,
        "properties": {
          "a_string": 3,
          "a_float": 4,
          "an_enum": 5,
          "an_integer_enum": 6,
          "a_float_enum": 7,
          "a_struct": 8,
          "nested": 10,
          "nested_with_ref": 14,
          "an_email": 17
        },
        "required": []
      },
      {
        "type": "string",
        "title": "string_5",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false
      },
      {
        "type": "float",
        "title": "float_6",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false,
        "minimum": 1.0,
        "multipleOf": 2.0
      },
      {
        "type": "string",
        "title": "string_7",
        "runtime": 0,
        "policies": [],
        "enum": [
          "\\\\"one\\\\"",
          "\\\\"two\\\\""
        ],
        "config": {},
        "as_id": false
      },
      {
        "type": "integer",
        "title": "integer_8",
        "runtime": 0,
        "policies": [],
        "enum": [
          "1",
          "2"
        ],
        "config": {
          "key": "value"
        },
        "as_id": false
      },
      {
        "type": "float",
        "title": "float_9",
        "runtime": 0,
        "policies": [],
        "enum": [
          "1.5",
          "2.5"
        ],
        "config": {},
        "as_id": false
      },
      {
        "type": "object",
        "title": "object_11",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false,
        "properties": {
          "value": 9
        },
        "required": []
      },
      {
        "type": "float",
        "title": "float_10",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false
      },
      {
        "type": "optional",
        "title": "optional_16",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false,
        "item": 11,
        "default_value": null
      },
      {
        "type": "list",
        "title": "list_15",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false,
        "items": 12
      },
      {
        "type": "either",
        "title": "either_14",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false,
        "oneOf": [
          3,
          13
        ]
      },
      {
        "type": "integer",
        "title": "integer_13",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false
      },
      {
        "type": "object",
        "title": "SomeType",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false,
        "properties": {
          "one": 15,
          "two": 16
        },
        "required": []
      },
      {
        "type": "list",
        "title": "Two",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false,
        "items": 13,
        "minItems": 3
      },
      {
        "type": "optional",
        "title": "_3_SomeType?",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false,
        "item": 14,
        "default_value": null
      },
      {
        "type": "string",
        "title": "string_17",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false,
        "format": "email"
      },
      {
        "type": "boolean",
        "title": "boolean_19",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false
      }
    ],
    "materializers": [
      {
        "name": "function",
        "runtime": 0,
        "effect": {
          "effect": "read",
          "idempotent": true
        },
        "data": {
          "script": "var _my_lambda = () => true",
          "secrets": []
        }
      },
      {
        "name": "predefined_function",
        "runtime": 0,
        "effect": {
          "effect": "read",
          "idempotent": true
        },
        "data": {
          "name": "true"
        }
      }
    ],
    "runtimes": [
      {
        "name": "deno",
        "data": {
          "worker": "default",
          "permissions": {}
        }
      }
    ],
    "policies": [
      {
        "name": "__public",
        "materializer": 1
      }
    ],
    "meta": {
      "prefix": null,
      "secrets": [],
      "queries": {
        "dynamic": true,
        "endpoints": []
      },
      "cors": {
        "allow_origin": [
          "*"
        ],
        "allow_headers": [],
        "expose_headers": [],
        "allow_methods": [
          "GET"
        ],
        "allow_credentials": false,
        "max_age_sec": 120
      },
      "auths": [
        {
          "name": "basic",
          "protocol": "basic",
          "auth_data": {
            "users": [
              "testBasicAuth"
            ]
          }
        },
        {
          "name": "testHmacAuth",
          "protocol": "jwt",
          "auth_data": {
            "format": "raw",
            "algorithm": {
              "name": "HMAC",
              "hash": {
                "name": "SHA-256"
              }
            }
          }
        }
      ],
      "rate": {
        "window_limit": 128,
        "window_sec": 60,
        "query_limit": 8,
        "context_identifier": "user",
        "local_excess": 5
      },
      "version": "0.0.3",
      "random_seed": null
    }
  }
]'
`;

snapshot[`typegraphs creation 5`] = `
\`[
  {
    "\$id": "https://metatype.dev/specs/0.0.3.json",
    "types": [
      {
        "type": "object",
        "title": "test-multiple-runtimes",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false,
        "properties": {
          "add": 1,
          "multiply": 4
        },
        "required": [
          "add",
          "multiply"
        ]
      },
      {
        "type": "function",
        "title": "func_5",
        "runtime": 1,
        "policies": [
          0
        ],
        "config": {},
        "as_id": false,
        "input": 2,
        "output": 3,
        "materializer": 0,
        "rate_weight": null,
        "rate_calls": false
      },
      {
        "type": "object",
        "title": "object_2",
        "runtime": 1,
        "policies": [],
        "config": {},
        "as_id": false,
        "properties": {
          "first": 3,
          "second": 3
        },
        "required": []
      },
      {
        "type": "float",
        "title": "float_0",
        "runtime": 1,
        "policies": [],
        "config": {},
        "as_id": false
      },
      {
        "type": "function",
        "title": "func_11",
        "runtime": 0,
        "policies": [
          0
        ],
        "config": {},
        "as_id": false,
        "input": 2,
        "output": 3,
        "materializer": 2,
        "rate_weight": null,
        "rate_calls": false
      }
    ],
    "materializers": [
      {
        "name": "lambda",
        "runtime": 1,
        "effect": {
          "effect": "read",
          "idempotent": true
        },
        "data": {
          "name": "sha256_1ba371f8249eab0c77239207fa3c16506224b5c287f58aa5ff322450a6aee50d",
          "fn": "lambda x: x['first'] + x['second']"
        }
      },
      {
        "name": "predefined_function",
        "runtime": 0,
        "effect": {
          "effect": "read",
          "idempotent": true
        },
        "data": {
          "name": "true"
        }
      },
      {
        "name": "function",
        "runtime": 0,
        "effect": {
          "effect": "read",
          "idempotent": true
        },
        "data": {
          "script": "var _my_lambda = ({first, second}) => first * second",
          "secrets": []
        }
      }
    ],
    "runtimes": [
      {
        "name": "deno",
        "data": {
          "worker": "default",
          "permissions": {}
        }
      },
      {
        "name": "python_wasi",
        "data": {
          "config": null
        }
      }
    ],
    "policies": [
      {
        "name": "__public",
        "materializer": 1
      }
    ],
    "meta": {
      "prefix": null,
      "secrets": [],
      "queries": {
        "dynamic": true,
        "endpoints": []
      },
      "cors": {
        "allow_origin": [],
        "allow_headers": [],
        "expose_headers": [],
        "allow_methods": [],
        "allow_credentials": true,
        "max_age_sec": null
      },
      "auths": [],
      "rate": null,
      "version": "0.0.3",
      "random_seed": null
    }
  }
]\`
`;

snapshot[`typegraphs creation 6`] = `
\`[
  {
    "\$id": "https://metatype.dev/specs/0.0.3.json",
    "types": [
      {
        "type": "object",
        "title": "test-types",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false,
        "properties": {
          "one": 1,
          "two": 6,
          "three": 10
        },
        "required": [
          "one",
          "two",
          "three"
        ]
      },
      {
        "type": "function",
        "title": "func_10",
        "runtime": 0,
        "policies": [
          0
        ],
        "config": {},
        "as_id": false,
        "input": 2,
        "output": 5,
        "materializer": 0,
        "rate_weight": null,
        "rate_calls": false
      },
      {
        "type": "object",
        "title": "object_2",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false,
        "properties": {
          "a": 3,
          "b": 4
        },
        "required": []
      },
      {
        "type": "integer",
        "title": "integer_0",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false
      },
      {
        "type": "integer",
        "title": "integer_1",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false,
        "minimum": 12
      },
      {
        "type": "integer",
        "title": "integer_3",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false,
        "minimum": 12,
        "maximum": 43
      },
      {
        "type": "function",
        "title": "func_12",
        "runtime": 0,
        "policies": [
          1
        ],
        "config": {},
        "as_id": false,
        "input": 7,
        "output": 9,
        "materializer": 2,
        "rate_weight": null,
        "rate_calls": false
      },
      {
        "type": "object",
        "title": "User",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false,
        "properties": {
          "id": 8,
          "post": 9
        },
        "required": []
      },
      {
        "type": "integer",
        "title": "integer_4",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false
      },
      {
        "type": "object",
        "title": "Post",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false,
        "properties": {
          "id": 8,
          "author": 7
        },
        "required": []
      },
      {
        "type": "function",
        "title": "func_14",
        "runtime": 0,
        "policies": [
          2
        ],
        "config": {},
        "as_id": false,
        "input": 2,
        "output": 2,
        "materializer": 4,
        "rate_weight": null,
        "rate_calls": false
      }
    ],
    "materializers": [
      {
        "name": "function",
        "runtime": 0,
        "effect": {
          "effect": "read",
          "idempotent": true
        },
        "data": {
          "script": "var _my_lambda = () => 12",
          "secrets": []
        }
      },
      {
        "name": "function",
        "runtime": 0,
        "effect": {
          "effect": "read",
          "idempotent": true
        },
        "data": {
          "script": "var _my_lambda = (_, { context }) => context.provider === 'internal'",
          "secrets": []
        }
      },
      {
        "name": "function",
        "runtime": 0,
        "effect": {
          "effect": "read",
          "idempotent": true
        },
        "data": {
          "script": "var _my_lambda = (user) => ({ id: 12, user })",
          "secrets": []
        }
      },
      {
        "name": "function",
        "runtime": 0,
        "effect": {
          "effect": "read",
          "idempotent": true
        },
        "data": {
          "script": "var _my_lambda = () => false",
          "secrets": []
        }
      },
      {
        "name": "import_function",
        "runtime": 0,
        "effect": {
          "effect": "read",
          "idempotent": true
        },
        "data": {
          "mod": 5,
          "name": "three",
          "secrets": []
        }
      },
      {
        "name": "module",
        "runtime": 0,
        "effect": {
          "effect": "read",
          "idempotent": true
        },
        "data": {
          "code": "file:scripts/three.ts;base64:H4sIAAAAAAAA/+0Y7W7bRiy//RSE/lTqFMUfsTuoa7GuLdYCHRq0GTAgMIyzdHK0SjpNd5ptGH6Tvc1ebLwPSWcnabIfSdHWRGKdeDweySN5FCOWlxldBYIf3Rv0ESaTybV4hNFofNqMJcjx5PTJ+Kh/9ABQc0EqgKPvFE5O4CUr11W6uBTwGxVErEsK7//9x4csjWjBaQx1EdMKxCWF1xnhIo3gnZ6CYdAPesji49mrP44N8vhtTAuRJimtwmbBMRL2emleskrABpKVD2cM+a99EPiHWy4qUl7CFpKK5eD83KJOePzpJEUBVsGf3Hna8XhFC/ahxo1yetOySk/zExSI7S1/UYsbtytJRXKuF/TaKbcHsMF/gILkNARHUC6OIx0/x5KMO76a5zSqqOAhXDh6OHB8MMNhNxw5U01fEYH8NG+AJWrLlh9pFMKk7+8g36V5KkIYDH9s8H/VtFobdIvMWESy16uIcpRh3GAjVgi6EvbpODWnlRF6qx8Rq3gnC8kytnxZUbWGZDiT4C/17ek3lKB7SG2nO3h0pksWKyv8+vrc2Z18jw6XFnLucTdDVyXj9Bp+OVm9WFBlksGwb8mrftxFCKRYe/DsuREcVeUC5KnDMyjo0nYW13tq0ZT1HEm0Lwb4gk9JYFFwltNzGRPPQARcVHUk3MY8rMBzE0GWcuGKIEX7Lmjlej76Vy61G6GAODb+cr5kDmy9RimxZHIxK0XKCpK5i6Ciiet8NPs5ntco2rFoJ5HPjpTGDW8SlMwQkRaLUE/hyG3lILMkY0TIKTVwjfADH/I6EynyfZ+EMLREJ8WMFnUul8jnzL1w0BTSs1EpZ2rTGaO09I2RNiAxFF0ftcezxt2GU6WrWas0S1IUeQOf6BqV/5tktdS84b7dV6HdpNFjb4tgjJsE4+nOSm2p0LIZqI06Pp5FX2DM09g6dJpiXqzcC8uulpbe1PO6E97jMlvi2hkeetg6mW3gnKSZsrAcuNc4w8vuzC1/WAQEU5sr81swJxz9+UJlql/kWGLxfEwI2KSXOYmG44mraN/giyL1Oq46OFuPkmShCrEgqYvItU6tlcpvkSKYM5ZRUnQ2AOuk5apYquSqIMZzoI5vzdIkofKMkhXGCIltJq03eIE0p45kFyO5MZjSFanweXSAK9CE+Ky5LO+hEryl/huMB/v136A/6Y8O9d8DwBep/75w7Xe2xsqkuCuDUlFfqQZ1+deEz3FDjpfgfj3y2UrjLsWKYaDkMDQ7KpiKZS9HkxjvKSO81PAdyecxaRK1dd05SVpx4VgXni5RWRE719+CHaFBbJoEnqlNYBXC6uKR4vtoCj/IF83w0bS9wG9I2Mai62sul3uS2d0oZj7o9Vt1cAoFjw3u80LLO2b7ld4vPKrSUvATcVlRek9dgFvyf/90Mtr//n8yGQ4P+f8B4EHzP1bFVUIiCufS294WZS1UhpyHgJX6nFYy25HuZdvryZSGSVumAVlFg/JT9SkOxIc5bEOLmQzGzTZUoa0+dkP4gPFbxT/p4txHVT4VbFk8VxWh/s4l9uaWJFs1i9/pdVW0u0mZjr4l4Kks1++1/Xdb/A/7w/GV/t9oMDjE/wPAd1T/9XQdRVSDpP1Cb/F8sNM5UQG/27HQbRHZCNGf23rdfIdfS+XLrlUIpyNNu184mn7hDcXiHarBz5eTKtViz6GjaTCmWNRksv93tV+UxrbepmDCyhLTqWlSneGLo2sfqyHxu+wmNp0IIyYS3nED2Ytg6DJSpn3Oar+G816dq5pwXa3IsZM079pIO42FwbBpdu7UcY1pjCCqMdcxVPIoRa5ylXOKM567VEoeu7Lp1rt2J8W11GMHX9ayZ6ZlU43VtumnrjkjhXb7pghG/a6MWjupZcgzZ3GdScR+efftFrIHOMABDnCA/wX/ARRc0w8AIAAA"
        }
      },
      {
        "name": "predefined_function",
        "runtime": 0,
        "effect": {
          "effect": "read",
          "idempotent": true
        },
        "data": {
          "name": "true"
        }
      }
    ],
    "runtimes": [
      {
        "name": "deno",
        "data": {
          "worker": "default",
          "permissions": {}
        }
      }
    ],
    "policies": [
      {
        "name": "__internal",
        "materializer": 1
      },
      {
        "name": "deny",
        "materializer": 3
      },
      {
        "name": "__public",
        "materializer": 6
      }
    ],
    "meta": {
      "prefix": null,
      "secrets": [],
      "queries": {
        "dynamic": true,
        "endpoints": []
      },
      "cors": {
        "allow_origin": [],
        "allow_headers": [],
        "expose_headers": [],
        "allow_methods": [],
        "allow_credentials": true,
        "max_age_sec": null
      },
      "auths": [],
      "rate": null,
      "version": "0.0.3",
      "random_seed": null
    }
  }
]\`
`;
